--- a/res/layout/aou.xml
+++ b/res/layout/aou.xml
@@ -5,7 +5,7 @@ android:orientation="vertical"
 android:keepScreenOn="true"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
-android:background="#062c36"
+android:background="#010203"
 >
 	<LinearLayout
 	android:layout_width="fill_parent"
