--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,7 +14,7 @@ android:keepScreenOn="true"
 	android:isScrollContainer="true"
 	android:layout_marginBottom="52dip"
 	android:layout_alignParentTop="true"
-	android:background="#062c36"
+	android:background="#010203"
 	>
 	    <ListView 
 	    android:id="@+id/messagelist"
