--- a/res/layout/market.xml
+++ b/res/layout/market.xml
@@ -13,7 +13,7 @@ android:layout_height="fill_parent"
 	android:isScrollContainer="true"
 	android:layout_marginBottom="30dip"
 	android:layout_alignParentTop="true"
-	android:background="#062c36"
+	android:background="#010203"
 	>
 		<ListView 
 		android:id="@+id/market"
